--- a/index.Rmd
+++ b/index.Rmd
@@ -60,15 +60,15 @@ penwidth = 2.0]
 
 edge [arrowhead = diamond]
 
-A [label = 'EXPLORATORY \nANALYSIS OF \nMICROBIOME DATA', fillcolor = yellow, penwidth = 5.0]
+A [label = 'EXPLORATORY \nANALYSIS OF \nMICROBIOME DATA', fillcolor = white, penwidth = 5.0]
 B [label = 'Preprocesed\nTidy Data']
 C [label = 'Metadata']
 D [label = 'OTU Table']
 E [label = 'Taxonomy Table']
 F [label = 'Composite Object']
 G [label = 'Data\nTansformation']
-H [label = 'Data\nVisualization']
-I [label = 'DEEPER INSIGHTS', fillcolor = yellow, penwidth = 5.0]
+H [label = 'Preliminary\nVisualization']
+I [label = 'DEEPER INSIGHTS', fillcolor = yellow, penwidth = 2.0]
 
 {A}  -> B
 {B}  -> C
@@ -80,7 +80,7 @@ I [label = 'DEEPER INSIGHTS', fillcolor = yellow, penwidth = 5.0]
 {F}  -> G
 {F}  -> H
 {G}  -> H
-{H}  -> I
+{G}  -> I
 
 
 }", height = 500, width = 500)
@@ -95,10 +95,10 @@ rsvg::rsvg_png(part3_flow, "img/part3_flow.png")
 <a href=""><img src="img/part2_bioinfo.png" alt="Book cover" width="100%" style="padding: 50px 0px 50px 0px; float: right;"/></a>
 
 ## Quick Glimpse {-}
-Investigating the role of microbial communities in health and disease requires a thorough knowledge of the entire analytical process. Using wrong approaches can cost a significant amount of dollars and lengthy process to achieve the desired results. This is <b>PART 2</b> of the practical user guides intended to provide analytical support to the microbiome research community. The entire guide is reproducible, allowing users to easily follow along. If interested, user may use this model to publish their findings in a book format.
+Investigating the role of microbial communities in health and disease requires a thorough knowledge of the entire analytical process. Using wrong approaches can cost a significant amount of dollars and lengthy process to achieve the desired results. This is <b>PART 3</b> of the practical user guides intended to provide analytical support to the microbiome research community. The entire guide is reproducible, allowing users to easily follow along. If interested, user may use this model to publish their findings in a book format.
 
 ## Structure of this guide {-}
 This guide is divided into chapters to facilitate easy navigation. Each chapter contains several sections as displayed in the navigation bars on the left and right. Click the hyper-linked text if you want to jump into a specific chapter or section.
 
 ## Code availability {-}
-The code that generated this guide is available at a public [GitHub repository](https://github.com/tmbuza/iMAP-part2/) or via a [GH-Page](https://tmbuza.github.io/iMAP-part2/). If interested you can request a consulting service by contacting the developer of this repo using <a href="https://complexdatainsights.com/contact-us">this contact form</a>. 
+The code that generated this guide is available at a public [GitHub repository](https://github.com/tmbuza/iMAP-part3/) or via a [GH-Page](https://tmbuza.github.io/iMAP-part3/). If interested you can request a consulting service by contacting the developer of this repo using <a href="https://complexdatainsights.com/contact-us">this contact form</a>. 
